fix spacing and hr

--- a/style.css
+++ b/style.css
@@ -25,10 +25,7 @@ body {
 h1 {
     display: block;
     font-size: 18px;
-    margin-top: 0.00em;
-    margin-bottom: 0.00em;
-    margin-left: 0;
-    margin-right: 0;
+    margin: 0 0 0 0;
     font-weight: bold;
 }
 
@@ -43,7 +40,6 @@ h1 {
 
 .profile-card {
     width: 350px;
-    height: 360px;
 
     display: flex;
     flex-direction: column;
@@ -54,7 +50,8 @@ h1 {
 }
 
 .profile-name {
-
+    position: relative;
+    top: -3rem;
     font-weight: 700;
     margin-block-start: 0px;
 }
@@ -68,6 +65,9 @@ h1 {
 }
 
 .profile-location {
+    position: relative;
+    top: -2.5rem;
+    font-size: 14px;
     font-weight: 400;
     color: hsl(0, 0%, 59%);
 }
@@ -81,15 +81,23 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    padding: 1.2rem 1.5rem;
 }
 
 .info p {
+    margin: 0;
+    font-size: 14px;
     color: hsl(0, 0%, 59%);
 }
 
 hr.solid {
-    border-top: 3px solid #bbb;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+    position: relative;
+    height: 0;
+
+    border: 0.5px solid #ddd;
+    width: 99%;
 }
 
 footer {
